[PATCH] GDBusProxy: add G_DBUS_PROXY_FLAGS_NO_MATCH_RULE flag
@lkundrak
Submitted by Lubomir Rintel Link to original bug (#758749)
Description
Created attachment 316409 A fix
D-Bus has an upper limit on number of Match rules and it's rather easy to hit with a big number of proxies with signal subscriptions. This happens with NetworkManager with hundreds of devices or connection settings. By passing G_DBUS_SIGNAL_FLAGS_NO_MATCH_RULE to g_dbus_connection_signal_subscribe(), the user can call AddMatch with a less granular match instead of a match per every proxy.
Patch 316409, "A fix":
0001-GDBusProxy-add-G_DBUS_PROXY_FLAGS_NO_MATCH_RULE-flag.patch